# DecisionGraph

./: .dockerignore  .env.example  .gitignore  00-index.md  CHANGELOG.md  Dockerfile  README.md  docker-compose.yml  idea_backlog.json  pyproject.toml
.github/workflows/: ci.yml
docs/: README.md  package.json
docs-DecisionGraph/: index.html  package-lock.json
docs-DecisionGraph/src/: App.tsx  index.css
docs-DecisionGraph/src/components/: DocSectionCard.tsx  ReadinessConsole.tsx  Sidebar.tsx  TopBar.tsx
docs-DecisionGraph/src/content/: docsContent.ts
docs-DecisionGraph/src/types/: docs.ts
docs/src/: App.css  App.tsx  index.css
docs/src/components/: DocSectionCard.tsx  HeroCard.tsx  MobileSectionNav.tsx  ReadinessConsole.tsx  TopBar.tsx
docs/src/content/: docsContent.ts
docs/src/types/: docs.ts
docs/src/utils/: filterSections.ts
src/decisiongraph/: __init__.py  __main__.py  api.py  api_context.py  api_home.py  api_schemas.py  cli.py  config.py  extractor.py  insights.py  integrations.py  mcp_server.py  models.py  ops.py  reporting.py  service.py  store.py  strategy.py
src/decisiongraph/api_routes/: __init__.py  decisions.py  ingestion.py  intelligence.py  system.py
src/decisiongraph/cli_commands/: __init__.py  core.py  ingestion.py  insights.py  runtime.py  service_factory.py  strategy_ops.py  utils.py
src/decisiongraph/mcp_toolsets/: core.py  (+5 more)
tests/: test_api.py  test_cli_chat.py  test_cli_commands.py  test_cli_runtime.py  test_config.py  test_insights.py  test_ops.py  test_service.py  test_strategy.py
tools/: ci_eval.jsonl  idea_lifecycle.py
