[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "decisiongraph"
version = "0.1.0"
description = "Engineering Decision Memory System with CLI, Web, and MCP interfaces."
readme = "README.md"
requires-python = ">=3.10"
authors = [{ name = "DecisionGraph Team" }]
dependencies = [
  "fastapi>=0.115.0",
  "uvicorn>=0.30.0",
  "typer>=0.12.0",
  "pydantic>=2.8.0",
  "mcp>=1.0.0",
  "httpx>=0.27.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.2.0",
]

[project.scripts]
decisiongraph = "decisiongraph.cli:app"

[tool.setuptools]
package-dir = { "" = "src" }

[tool.setuptools.packages.find]
where = ["src"]
